@@ -1,3 +1,8 @@
+2004-10-31 21:00  svu
+
+	* libxklavier/xklavier_config_xkb.c:
+	Fixing the xkbcomp command line. Ubercool!
+
 2004-10-24 03:54  svu
 
 	* libxklavier/xklavier_config.h, libxklavier/xklavier_evt.c,
